Cherry-pick 283181@main (bec6d22a9343). https://bugs.webkit.org/show_bug.cgi?id=278919

Web Inspector: $event ReferenceError in Safari extension event listeners
    https://bugs.webkit.org/show_bug.cgi?id=278919

    Reviewed by BJ Burg.

    Grabbing the `GlobalObject` from the `ScriptExecutionContext` is not always going to be correct if the `EventListener` was created in a `DOMWrapperWorld`.

    * Source/WebCore/inspector/agents/InspectorDOMDebuggerAgent.cpp:
    (WebCore::globalObject): Added.
    (WebCore::InspectorDOMDebuggerAgent::willHandleEvent):
    (WebCore::InspectorDOMDebuggerAgent::didHandleEvent):

    * LayoutTests/inspector/dom-debugger/command-line-api-event.html: Added.
    * LayoutTests/inspector/dom-debugger/command-line-api-event-expected.txt: Added.

    Canonical link: https://commits.webkit.org/283181@main

Canonical link: https://commits.webkit.org/282416.185@webkitglib/2.46